weekly observation graph fixes (#642)
* adapt legend
* modify x-axis rendering
* correct domain width
* set tick interval to 1 for desktop
* draw ticks in the middle of barchart bars
* remove text from labels
* fix breakpoints for tablet size
* align graph select right
* causes issues with panel drawn out of bounds
* pull correct aggregation year
* do not round yearly aggregates
* fix rendering issues
* set minimum size for the chart
* set svg container size on resize
* fix chart dimension calculation and margin calculations
* minor fixes
* disallow all species selection
* fix base resource query document counts
* wording
* add missing translations
* prevent select box overflow

--- a/src/app/domains/statistics/statistics.page.scss
+++ b/src/app/domains/statistics/statistics.page.scss
@@ -22,6 +22,7 @@
 
   &__statistics-filter {
     form {
+      display: flex;
       flex-direction: row;
       align-items: baseline;
 
@@ -35,6 +36,10 @@
 
       mat-form-field.short-width {
         max-width: 6rem;
+      }
+
+      mat-form-field:last-child {
+        margin-left: auto;
       }
     }
 
@@ -95,4 +100,12 @@
   &__tooltip.hidden {
     display: none;
   }
+}
+
+// Align select box to the right to prevent overflow
+.align-select-box-right.mat-mdc-select-panel {
+  right: 0 !important;
+  left: auto !important;
+  transform-origin: right top !important;
+  position: absolute;
 }
